Bug 41435 - Regression: sent message does not fallback to connection's self contact anymore
Summary: Regression: sent message does not fallback to connection's self contact anymore
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://cgit.collabora.com/git/user/xc...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2011-10-03 22:18 UTC by Xavier Claessens
Modified: 2011-10-04 05:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Xavier Claessens 2011-10-03 22:18:47 UTC
Since the changes to prepare the message sender, tp-glib does not fallback to tp_connection_get_self_contact() anymore in message_sent_cb.

This makes sender of sent message being NULL with butterfly because it does not set "message-sender" for sent messages.

This bug was reported against gnome-shell: https://bugzilla.gnome.org/show_bug.cgi?id=660822
Comment 1 Xavier Claessens 2011-10-03 23:11:10 UTC
This hopefully fix the issue:
http://cgit.collabora.com/git/user/xclaesse/telepathy-glib.git/log/?h=sent-sender

Did not test with butterfly yet, since nobody is still using MSN here.
Comment 2 Will Thompson 2011-10-04 04:58:47 UTC
Looks fine.
Comment 3 Xavier Claessens 2011-10-04 05:08:00 UTC
thanks, merged.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.