TpTextChannel: Fallback to self contact if sent message does not have a sender

This was a regression, butterfly does not set message-sender on sent messages.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=41435